--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -31,7 +31,7 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: hello-artifact
+        path: ./artifacts/
     - name: echo file 
       run: cat ./artifacts/hello.txt
 
-      
