--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -8,22 +8,23 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: Create a text file
       run: echo "Hello, world!" > hello.txt
 
     - name: Archive text file
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3
       with:
         name: hello-artifact
         path: hello.txt
   
   download: 
+   needs: build
    runs-on: ubuntu-latest
    steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
    
 
